--- a/eventos/templates/home.html
+++ b/eventos/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "layout/base.html" %}
+{% load static %}
 
 {% block body %} 
     <h1>{{ title }}</h1>    
@@ -16,7 +17,16 @@
     <div class="col">
         <div class="card shadow-lg">       
             <div class="card-body">
-                <h5 class="card-title text-center">{{ row.nombre }}</h5>
+                <h3 class="card-title text-center">{{ row.nombre }}</h3>
+
+                <div class="d-flex justify-content-center mb-3">
+                    
+                    {% if row.image %}
+                    <img src="{{ row.image.url }}" class="img-fluid rounded" style="width: 80%; height: 300px; object-fit: cover;" alt="{{ row.nombre }}"/>
+                    {% else %}
+                    <img src="{% static 'img/No-image-available.png' %}" style="width: 80%; height: 300px; object-fit: cover;" alt="No image available" class="img-fluid">
+                    {% endif %}
+                </div>
 
                 <div class="d-flex justify-content-between">
                     <div>
