--- a/eventos/templates/components/menu.html
+++ b/eventos/templates/components/menu.html
@@ -23,9 +23,11 @@
                     </li>
                     
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="button" type="submit">Search</button>
+                <form class="d-flex" role="search" action="{% url 'buscar' %}" method="post">
+                    {% csrf_token %}
+                    <input class="form-control me-2" type="search" placeholder="Buscar Evento" 
+                    aria-label="Search" name="nombre" />
+                    <button class="button" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
