--- a/eventos/templates/home.html
+++ b/eventos/templates/home.html
@@ -17,7 +17,12 @@
     <div class="col">
         <div class="card shadow-lg">       
             <div class="card-body">
-                <h3 class="card-title text-center">{{ row.nombre }}</h3>
+                <!-- <a href="{% url 'detalle' row.id %}" class="nav-link active" aria-current="page"> -->
+                    <!-- <h3 class="card-title text-center mb-3">{{ row.nombre }}</h3>         -->
+                <!-- </a> -->
+                <a href="{% url 'detalle' row.id %}" class="text-decoration-none">
+                    <h3 class="card-title text-center mb-3">{{ row.nombre }}</h3>
+                </a>
 
                 <div class="d-flex justify-content-center mb-3">
                     
