--- a/eventos/templates/layout/base.html
+++ b/eventos/templates/layout/base.html
@@ -17,8 +17,7 @@
     {% endblock%}
     </div>
 
-    <footer class="text-center mt-4">
-        <p>&copy; 2025 Eventos. All rights reserved.</p>
+    {% include "components/_footer.html" %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
