--- a/eventos/templates/contacto.html
+++ b/eventos/templates/contacto.html
@@ -1,16 +1,47 @@
 {% extends "layout/base.html" %}
 {% block body %}
 
+    <div id="msg" class="m-3">
+    {% if messages %}
+        {% for message in messages %}
+                {% if message.tags == 'success' %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    {{ message }}                  
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% elif message.tags == 'error' %}
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                 {% elif message.tags == 'warning' %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% elif message.tags == 'info' %}
+                <div class="alert alert-info alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endif %}
+        {% endfor %}
+    {% endif %}
+    </div>
+
     <div class="card shadow-lg w-75 mx-auto mt-3">
         <div class="card-header">
             <h3 class="text-center">Formulario de Contacto</h3>
         </div>      
         <div class="card-body">
-            <form method="post" >
+            <form method="post" action="{% url 'contacto' %}">
                 {% csrf_token %}
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" required>
+                    <input type="text" class="form-control" 
+                    id="nombre" name="nombre" 
+                    placeholder="Nombre completo">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
@@ -22,6 +53,7 @@
                     <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="reset" class="btn btn-secondary">Cancelar</button>
             </form>
         </div>
     </div>
