--- a/eventos/templates/layout/base.html
+++ b/eventos/templates/layout/base.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eventos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
 
     {% include "components/menu.html" %}
+     {% include "components/_mensaje.html" %}
 
     
     <div class="container">       
@@ -20,5 +22,17 @@
     {% include "components/_footer.html" %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <!-- <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const msg = document.getElementById('msg');
+            if (msg) {
+                setTimeout(() => {
+                    msg.style.display = 'none';
+                }, 5000);
+            }
+        });
+    </script> -->
+
+
 </body>
 </html>
